--- a/src/components/content/ContentDiscordConversation.astro
+++ b/src/components/content/ContentDiscordConversation.astro
@@ -1,7 +1,7 @@
 ---
+import GgSansFont from '@components/fonts/GgSansFont.astro'
 import Link from '@components/Link.astro'
 import { Icon } from 'astro-icon/components'
-import DiscordFonts from './fonts/DiscordFonts.astro'
 
 interface Props {
   src?: string
@@ -14,7 +14,7 @@ const {
 } = Astro.props
 ---
 
-<DiscordFonts />
+<GgSansFont />
 
 <section
   class='discord-conversation relative bg-neutral shadow-lg outline outline-neutral-content/75'
