--- a/src/components/content/ContentDiscordMessage.astro
+++ b/src/components/content/ContentDiscordMessage.astro
@@ -1,6 +1,6 @@
 ---
 import type { JSX } from 'astro/jsx-runtime'
-import ImageCard from './ImageCard.astro'
+import ImageCard from '@components/ImageCard.astro'
 
 interface Props {
   author: string
