--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ import { Icon } from 'astro-icon/components'
   >
     <div class='relative flex items-center justify-center'>
       <p
-        class='title !text-[12rem] !font-bold !text-base-content/25'
+        class='font-brand !text-[12rem] !font-bold !text-base-content/25'
         style='font-size: 12rem !important; line-height: 1 !important; color: oklch(var(--n))'
       >
         404
@@ -29,8 +29,8 @@ import { Icon } from 'astro-icon/components'
     <article>
       <error-message>
         <h1
-          class='title !text-[1rem] !font-bold !tracking-tighter'
-          style='font-size: 2rem !important; line-height: 1 !important;'
+          class='font-brand mx-auto max-w-[18ch] text-balance !text-[1rem] !font-bold !tracking-tighter'
+          style='font-size: 2rem !important; line-height: 1.3 !important; text-align-last: center;'
         >
           page not found
         </h1>
