--- a/src/pages/unlicense.astro
+++ b/src/pages/unlicense.astro
@@ -1,5 +1,5 @@
 ---
-import ContentVideo from '@/components/content/ContentVideo.astro'
+import Video from '@/components/content/ContentVideo.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
@@ -51,7 +51,7 @@ import PageLayout from '@/layouts/PageLayout.astro'
           >
         </p>
       </article>
-      <ContentVideo
+      <Video
         class='animate'
         src='IeTybKL1pM4'
         title='"Copying Is Not Theft" by Question Copyright'
