--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -5,7 +5,7 @@ import CollectionPageStructuredData from '@/components/meta/CollectionPageStruct
 import MusicPageStructuredData from '@/components/meta/MusicPageStructuredData.astro'
 import ProfilePageStructuredData from '@/components/meta/ProfilePageStructuredData.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
-import { Image } from 'astro:assets'
+import { Image, Picture } from 'astro:assets'
 import { getCollection } from 'astro:content'
 import { Icon } from 'astro-icon/components'
 
@@ -52,10 +52,11 @@ const bandcampAlbums = await getCollection('music')
     <div class='animate mb-12'>
       <Subheader
         class='mb-12 space-y-12'
+        headingLevel='h1'
         title='My Music'
         subtitle='my released albums & music projects'
         link={{
-          text: 'Open in Bandcamp',
+          text: 'Listen on Bandcamp',
           href: 'https://fractalcounty.bandcamp.com',
           icon: 'lucide:external-link',
         }}
@@ -106,6 +107,7 @@ const bandcampAlbums = await getCollection('music')
         title='last.fm'
         subtitle='my listening stats from last.fm'
         metadataPosition='bottom'
+        headingLevel='h2'
         metadata={[
           {
             label: 'total plays',
@@ -126,7 +128,7 @@ const bandcampAlbums = await getCollection('music')
       <!-- top tracks grid -->
       <div class='space-y-4'>
         <div class='animate flex items-center gap-4'>
-          <h2 class='font-semibold uppercase'>Top Tracks</h2>
+          <h3 class='font-semibold uppercase'>Top Tracks</h3>
           <div class='h-[1px] flex-1 bg-base-content/20'></div>
           <Link
             href={`https://www.last.fm/user/${LASTFM_USERNAME}/library/tracks`}
@@ -162,9 +164,9 @@ const bandcampAlbums = await getCollection('music')
                       <span class='inline-flex items-center gap-x-1 text-xs font-semibold text-primary opacity-0 transition-opacity duration-200 group-hover:opacity-100'>
                         {track.playcount} plays
                       </span>
-                      <h2 class='text-lg font-semibold text-base-content lg:text-sm'>
+                      <h4 class='text-lg font-semibold text-base-content lg:text-sm'>
                         {track.name}
-                      </h2>
+                      </h4>
                       <p class='mt-1 text-sm text-base-content/80'>
                         {track.artist.name}
                       </p>
@@ -182,7 +184,7 @@ const bandcampAlbums = await getCollection('music')
         <!-- top artists -->
         <div class='w-full space-y-4'>
           <div class='animate flex items-center gap-4'>
-            <h2 class='title font-bold uppercase'>Top Artists</h2>
+            <h3 class='title font-bold uppercase'>Top Artists</h3>
             <div class='h-[1px] flex-1 bg-base-content/20'></div>
             <Link
               href={`https://www.last.fm/user/${LASTFM_USERNAME}/library/artists`}
@@ -215,9 +217,9 @@ const bandcampAlbums = await getCollection('music')
                     class='size-12 flex-shrink-0 rounded-lg object-cover'
                   />
                   <div class='min-w-0 flex-1'>
-                    <h3 class='line-clamp-1 font-medium group-hover:text-primary'>
+                    <h4 class='line-clamp-1 font-medium group-hover:text-primary'>
                       {artist.name}
-                    </h3>
+                    </h4>
                     <p class='line-clamp-1 text-sm text-base-content/80'>
                       {Number(artist.playcount).toLocaleString()} plays
                     </p>
@@ -231,7 +233,7 @@ const bandcampAlbums = await getCollection('music')
         <!-- top albums -->
         <div class='mb-12 w-full space-y-4'>
           <div class='animate flex items-center gap-4'>
-            <h2 class='title font-bold uppercase'>Top Albums</h2>
+            <h3 class='title font-bold uppercase'>Top Albums</h3>
             <div class='h-[1px] flex-1 bg-base-content/20'></div>
             <Link
               href={`https://www.last.fm/user/${LASTFM_USERNAME}/library/albums`}
@@ -263,9 +265,9 @@ const bandcampAlbums = await getCollection('music')
                     class='size-12 flex-shrink-0 rounded-lg object-cover'
                   />
                   <div class='min-w-0 flex-1'>
-                    <h3 class='line-clamp-1 font-medium group-hover:text-primary'>
+                    <h4 class='line-clamp-1 font-medium group-hover:text-primary'>
                       {album.name}
-                    </h3>
+                    </h4>
                     <p class='line-clamp-1 text-sm text-base-content/80'>
                       {album.artist.name} •{' '}
                       {Number(album.playcount).toLocaleString()} plays
@@ -319,13 +321,14 @@ const bandcampAlbums = await getCollection('music')
         <Subheader
           title='Featured Playlist'
           subtitle='my favorite music on Spotify'
+          headingLevel='h2'
         />
         <Link
           href={`https://open.spotify.com/playlist/${PLAYLIST_ID}`}
           class='inline-flex items-center gap-2 text-sm'
           externalInNewTab={true}
         >
-          Open in Spotify
+          Listen on Spotify
           <Icon name='lucide:external-link' class='size-4' />
         </Link>
       </div>
@@ -338,15 +341,25 @@ const bandcampAlbums = await getCollection('music')
           playlist && (
             <div class='animate space-y-4'>
               <div class='flex gap-6'>
-                <Image
-                  src={playlist.image}
-                  alt={playlist.name}
-                  class='size-32 rounded-lg border border-base-content/15 object-cover shadow-md'
-                  loading='lazy'
-                  inferSize
-                />
+                {/* playlist thumbnail artwork image */}
+                <div class='relative h-[150px] w-[149.5px] flex-shrink-0'>
+                  <Picture
+                    src={playlist.image}
+                    alt={playlist.name}
+                    width={259}
+                    height={259}
+                    widths={[129, 259]}
+                    sizes='149px'
+                    class='absolute inset-0 h-full w-full rounded-lg border border-base-content/15 object-cover shadow-md'
+                    style={{
+                      aspectRatio: '1/1',
+                      objectFit: 'cover',
+                    }}
+                    loading='lazy'
+                  />
+                </div>
                 <div class='flex flex-col justify-center'>
-                  <h3 class='text-xl font-bold'>{playlist.name}</h3>
+                  <h3 class='font-brand text-xl font-bold'>{playlist.name}</h3>
                   <p class='text-base-content/75'>{playlist.description}</p>
                 </div>
               </div>
@@ -364,11 +377,10 @@ const bandcampAlbums = await getCollection('music')
                     <Image
                       src={track.image}
                       alt={track.name}
+                      width={48}
+                      height={48}
                       class='size-12 rounded border border-base-content/25 object-cover shadow-sm'
                       loading='lazy'
-                      inferSize
-                      width={64}
-                      height={64}
                     />
                     <div class='min-w-0 flex-1'>
                       <h4 class='line-clamp-1 font-medium group-hover:text-primary'>
