--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -360,7 +360,10 @@ const bandcampAlbums = await getCollection('music')
                 </div>
                 <div class='flex flex-col justify-center'>
                   <h3 class='font-brand text-xl font-bold'>{playlist.name}</h3>
-                  <p class='text-base-content/75'>{playlist.description}</p>
+                  <p
+                    class='text-base-content/75'
+                    set:html={playlist.description}
+                  />
                 </div>
               </div>
 
