final playlist fix

--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -14,7 +14,7 @@ import { fetchLastFmData } from '@/lib/lastfm'
 import { getPlaylistDetails, getSpotifyToken } from '@/lib/spotify'
 
 const LASTFM_USERNAME = 'fractalcounty'
-const PLAYLIST_ID = '3wdk7bjW20AkOZDVG7MmLD'
+const PLAYLIST_ID = '6mcNUOZBJVOl38rvUS5suh'
 
 const spotifyToken = await getSpotifyToken()
 const lastFmData = await fetchLastFmData(
