--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -53,7 +53,7 @@ const bandcampAlbums = await getCollection('music')
       <Subheader
         class='mb-12 space-y-12'
         headingLevel='h1'
-        title='My Music'
+        title='Music'
         subtitle='my released albums & music projects'
         link={{
           text: 'Listen on Bandcamp',
