after moving to cdn fonts

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -8,13 +8,11 @@ const navItems = getNavItems()
 <header
   role='banner'
   class='fixed left-1/2 top-0 z-50 w-full max-w-[42rem] -translate-x-1/2 bg-base-100/80 px-5 py-4 backdrop-blur-sm'
-  transition:persist
->
+  transition:persist>
   <a
     href='#main-content'
     class='sr-only focus:not-sr-only focus:absolute focus:left-4 focus:top-4 focus:z-[100] focus:rounded-lg focus:bg-neutral focus:px-4 focus:py-2 focus:text-base-content focus:outline-none focus:ring-2 focus:ring-base-content'
-    tabindex='0'
-  >
+    tabindex='0'>
     Skip to main content
   </a>
 
@@ -25,14 +23,9 @@ const navItems = getNavItems()
         title={`${site.name} - Return to homepage`}
         externalInNewTab={false}
         underline={false}
-        class='font-brand text-base font-black subpixel-antialiased md:text-lg'
         aria-label={`${site.name} - Return to homepage`}
-      >
-        <span
-          class='title font-bold uppercase subpixel-antialiased transition-colors duration-150 hover:text-primary'
-        >
-          {site.name}
-        </span>
+        class='title font-brand text-base font-black uppercase subpixel-antialiased transition-colors duration-150 hover:text-primary md:text-lg'>
+        <span>{site.name}</span>
       </Link>
       <nav role='navigation' aria-label='Main navigation'>
         <ul class='m-0 flex list-none gap-1 p-0'>
@@ -49,8 +42,7 @@ const navItems = getNavItems()
                     underline={true}
                     aria-current={
                       Astro.url.pathname === item.href ? 'page' : undefined
-                    }
-                  >
+                    }>
                     {item.name}
                   </Link>
                 </li>
