--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const allPosts = (await getCollection('blog'))
   .filter((post: any) => !post.data.draft)
   .sort(
     (a: any, b: any) =>
-      b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+      b.data.publishDate.valueOf() - a.data.publishDate.valueOf(),
   )
   .slice(0, NUM_POSTS_ON_HOMEPAGE)
 
@@ -27,7 +27,7 @@ const recentArts = (await getCollection('art'))
   .filter((art: any) => !art.data.draft)
   .sort(
     (a: any, b: any) =>
-      b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+      b.data.publishDate.valueOf() - a.data.publishDate.valueOf(),
   )
   .slice(0, NUM_ART_ON_HOMEPAGE)
 
@@ -38,14 +38,13 @@ const topTracks = await fetchTopTracks(
   LASTFM_USERNAME,
   import.meta.env.LASTFM_API_KEY,
   spotifyToken,
-  true
+  true,
 )
 ---
 
 <PageLayout
   title={site.pages.home.title}
-  description={site.pages.home.description}
->
+  description={site.pages.home.description}>
   <WebsiteStructuredData slot='structured-data' />
   <ProfilePageStructuredData slot='structured-data' />
 
@@ -113,8 +112,7 @@ const topTracks = await fetchTopTracks(
               index === 3 ? 'hidden sm:flex' : ''
             }`}
             underline={false}
-            externalInNewTab={true}
-          >
+            externalInNewTab={true}>
             <Picture
               src={
                 track.image[2]['#text'] ||
@@ -175,8 +173,7 @@ const topTracks = await fetchTopTracks(
               <Link
                 href={url}
                 title={`${site.author.username} on ${name}`}
-                externalInNewTab={true}
-              >
+                externalInNewTab={true}>
                 {name}
               </Link>
               /
@@ -187,8 +184,7 @@ const topTracks = await fetchTopTracks(
         <Link
           href={`mailto:${encodeURIComponent(site.author.email)}`}
           title={`Email ${site.author.name}`}
-          externalInNewTab={false}
-        >
+          externalInNewTab={false}>
           {site.author.email}
         </Link>
       </li>
